# k_nearest_neighbors

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ball_tree_algorithms.txt  explain_prompt.txt  kd_ball_tree_algorithm.e  knn_images.py  shuffled_indexes.txt
include/: algorithm.h  allocation.h  brute.h  constants.h  image.h  knn.h  metrics.h  preprocessing.h  results.h  types.h  types_constants.h
src/: algorithm.c  allocation.c  brute.c  image.c  knn.c  main.c  metrics.c  preprocessing.c  results.c
